--- a/sourse/pug/blocks/sExperience/_sExperience.scss
+++ b/sourse/pug/blocks/sExperience/_sExperience.scss
@@ -452,7 +452,7 @@
 }
 
 .choices__list--dropdown .choices__list, .choices__list[aria-expanded] .choices__list{
-	min-height: rem(300);
+	// min-height: rem(300);
 }
 
 
