--- a/sourse/pug/pages/09-subspecies-services.pug
+++ b/sourse/pug/pages/09-subspecies-services.pug
@@ -39,6 +39,8 @@ block pagecontent
 		+sService2Item('', 'Управление программой IT-деятельности компании на базе SAP BPC NW', 'right', 'trans.svg', 'Финансы, Управление цепочками поставок')
 	+sService2().bg-white
 		+sService2Item('', 'Управление программой IT-деятельности компании на базе SAP BPC NW', 'right', 'trans.svg', 'Финансы, Управление цепочками поставок', 'true').--single
+		+sService2Item('', 'Построение автоматизированной системы распределения операционных расходов', 'right', 'sberbank.svg', 'Финансы, Управление цепочками поставок', 'true').--single
+		+sService2Item('', 'Управление программой IT-деятельности компании на базе SAP BPC NW', 'right', 'trans.svg', 'Финансы, Управление цепочками поставок', 'true').--single
 	+sForm().bg-dark.section--vh
 	+footer().bg-dark
       
