--- a/sourse/pug/blocks/sSearchResult/_sSearchResult.pug
+++ b/sourse/pug/blocks/sSearchResult/_sSearchResult.pug
@@ -61,8 +61,6 @@ mixin sSearchResult(data)
 						+e.item Мероприятия
 					+e.slide.swiper-slide.btn-aos-refresh.tabs__btn
 						+e.item Проекты
-					+e.slide.swiper-slide.btn-aos-refresh.tabs__btn
-						+e.item Нечего не найдено
 			.tabs__content.active
 				+sSearchResultItem('sSearch-img-8.jpg', 'Сотрудники ИНВИТРО ставят цели и&nbsp;планируют развитие с&nbsp;помощью SAP SuccessFactors', 'По&nbsp;данным аналитического центра TAdviser, САПРАН Групп занял шестое место в&nbsp;рейтинге &laquo;Крупнейшие поставщики BI-решений в&nbsp;России 2020&raquo;...', '', 'НОВОСТЬ', '', '', true, '#управление компании', '#жизнь компании')
 				+sSearchResultItem('sSearch-img-8.jpg', 'Золотая награда SAP QUALITY AWARD 2017', 'Компания SAPRUN стала участником Большой встречи клуба первых лиц ритейла Redis Business Class. Традиционно мероприятие объединяет представителей топ-менеджмента и&nbsp;владельцев розничных компаний со&nbsp;всей России. В&nbsp;этом году встреча прошла 8&nbsp;сентября 2021 года в&nbsp;Центре цифрового лидерства SAP и&nbsp;собрала более...', '', 'НОВОСТЬ', '', '', true, '#управление компании', '#жизнь компании')
@@ -156,6 +154,16 @@ mixin sSearchResult(data)
 				+e.showMore(href="#" data-aos="fade-up" data-aos-delay="300")
 					| Показать ещё проекты
 					+icon('chevron-down')
-			.tabs__content
+
+
+mixin sSearchResult2(data)
+	// start sSearchResult
+	+b.SECTION.sSearchResult.section#sSearchResult&attributes(attributes)
+		.container.tabs
+			+e.slider--js.swiper(data-aos="fade-up" data-aos-delay="300")
+				.swiper-wrapper.tabs__caption
+					+e.slide.swiper-slide.btn-aos-refresh.tabs__btn.active
+						+e.item По тегу
+			.tabs__content.active
 				+e.nothing Извините, по вашему запросу ничего не найдено. Измените поисковый запрос
 	// end sSearchResult
