--- a/sourse/pug/blocks/sService/_sService.scss
+++ b/sourse/pug/blocks/sService/_sService.scss
@@ -105,7 +105,7 @@
 					color: $primary;
 				}
 				&--single {
-					padding-bottom: rem(38px);
+					// padding-bottom: rem(38px);
 				}
 			}
 			&__caption {
@@ -114,7 +114,7 @@
 			&__online {
 				font-size: rem(13);
 				font-weight: 300;
-				text-transform: uppercase;
+				// text-transform: uppercase;
 				margin-bottom: rem(6);
 				padding-top: rem(6);
 			}
@@ -137,9 +137,10 @@
 					}
 				}
 				&--single {
-					position: absolute;
-					bottom: 0;
-					left: 0;
+					// position: absolute;
+					// bottom: 0;
+					// left: 0;
+					margin-top: rem(8);
 				}
 				.icon {
 					font-size: rem(7);
