--- a/sourse/pug/blocks/footer/_footer.pug
+++ b/sourse/pug/blocks/footer/_footer.pug
@@ -12,7 +12,7 @@ mixin footer()
 						+e.btn(type="submit")
 							+icon("arrow-right")
 						+e.policy Вы&nbsp;можете отписаться в&nbsp;любое время. Ознакомьтесь с&nbsp;нашей #[a(href="#") политикой конфиденциальности]
-		+e.block.container
+		+e.block--addr.container
 			.row
 				.col-lg-9
 					.row
