--- a/sourse/pug/blocks/sNews/_sNews.pug
+++ b/sourse/pug/blocks/sNews/_sNews.pug
@@ -84,7 +84,7 @@ mixin sNewsPublication(data)
 					+b.publ-item.swiper-slide
 						+b.end-news-card(href="#")
 							+e.wrap
-								+e.title Перейти в раздел новости
+								+e.title Перейти в раздел публикации
 								+icon('arrow-right-link')
 				.swiper-scrollbar
 	// end sNews
