--- a/sourse/pug/blocks/sJoin/_sJoin.scss
+++ b/sourse/pug/blocks/sJoin/_sJoin.scss
@@ -65,10 +65,13 @@
 		top: 0;
 		width: 100%;
 		height: 100%;
-		pointer-events: none;
-		img{
-			opacity: 0;
+		@include media-breakpoint-up(lg) {
 
+			pointer-events: none;
+			img{
+				opacity: 0;
+				
+			}
 		}
 	}
 	.img-animate{
@@ -86,8 +89,9 @@
 		
 	}
 	&__col{
-		opacity: 0;
+		
 		@include media-breakpoint-up(lg) {
+			opacity: 0;
 
 			margin-left: auto;
 			min-height: 100vh;
