--- a/sourse/pug/blocks/sStatus/_sStatus.scss
+++ b/sourse/pug/blocks/sStatus/_sStatus.scss
@@ -60,11 +60,13 @@
 		display: flex;
 		flex-wrap: wrap;
 		border-top: 1px solid #e3e7ec;
-		border-bottom: 1px solid #e3e7ec;
+		@include media-breakpoint-down(lg){
+			border-bottom: 1px solid #e3e7ec;
+		}
 		position: relative;
 		&::before {
 			content: "";
-			width: 2px;
+			width: 1px;
 			background-color: #e3e7ec;
 			position: absolute;
 			@include media-breakpoint-up(lg) {
@@ -78,7 +80,7 @@
 		}
 		&::after {
 			content: "";
-			width: 2px;
+			width: 1px;
 			background-color: #e3e7ec;
 			position: absolute;
 			@include media-breakpoint-up(lg) {
@@ -94,6 +96,7 @@
 		display: flex;
 		justify-content: center;
 		align-items: center;
+		position: relative;
 		@include media-breakpoint-down(lg) {
 			padding: rem(35) rem(22);
 		}
@@ -101,6 +104,7 @@
 			width: 33.3333%;
 			padding: rem(30);
 			max-height: rem(172);
+			height: rem(172);
 		}
 		width: 50%;
 		max-height: rem(118);
@@ -108,19 +112,34 @@
 			padding: rem(50);
 		}
 		@include media-breakpoint-up(lg) {
+			// margin-top: -1px;
+			// margin-bottom: -1px;
+			top: -1px;
 			&:nth-child(1),
 			&:nth-child(3n + 1) {
 				border-left: none;
+				// margin-right: -1px;
 			}
-			// &:nth-child(2),
-			// &::nth-child(3n + 2) {
-			// }
+			&:nth-child(2),
+			&:nth-child(3n + 2) {
+				left: -1px;
+				width: calc(33.3333% + 2px);
+			}
 			&:nth-child(3),
 			&:nth-child(3n + 3) {
 				border-right: none;
+				// margin-left: -1px;
+				width: calc(33.3333% - 2px);
+				left: -2px;
 			}
 		}
 		@include media-breakpoint-down(lg) {
+			&:nth-child(1),&:nth-child(2){
+				top: -1px;
+				border-top: 1px solid #e3e7ec;
+			}
+			border-top: none;
+			top: 1px;
 			&:nth-child(odd) {
 				border-left: none;
 				// border-top: 1px solid #e3e7ec;
@@ -131,6 +150,7 @@
 			// }
 			&:nth-child(even) {
 				border-right: none;
+				left: -1px;
 				// border-top: 1px solid #e3e7ec;
 			}
 			// &:nth-child(2) {
