--- a/sourse/pug/blocks/sWorkConditions/_sWorkConditions.scss
+++ b/sourse/pug/blocks/sWorkConditions/_sWorkConditions.scss
@@ -80,6 +80,8 @@
 	&__item-icon {
 		margin-right: rem(16);
 		width: rem(56);
+		max-width: rem(56);
+		min-width: rem(55.999);
 		height: rem(56);
 		img{
 			width: 100%;
