--- a/sourse/pug/blocks/sExpert/_sExpert.scss
+++ b/sourse/pug/blocks/sExpert/_sExpert.scss
@@ -145,15 +145,15 @@
 		font-size: rem(18);
 		line-height: calc(24 / 18);
 		max-height: rem(120);
-		display: -webkit-box;
-		-webkit-box-orient: vertical;
-		-moz-box-orient: vertical;
-		-ms-box-orient: vertical;
-		box-orient: vertical;
-		-webkit-line-clamp: 5;
-		-moz-line-clamp: 5;
-		-ms-line-clamp: 5;
-		line-clamp: 5;
+		// display: -webkit-box;
+		// -webkit-box-orient: vertical;
+		// -moz-box-orient: vertical;
+		// -ms-box-orient: vertical;
+		// box-orient: vertical;
+		// -webkit-line-clamp: 5;
+		// -moz-line-clamp: 5;
+		// -ms-line-clamp: 5;
+		// line-clamp: 5;
 		overflow: hidden;
 		margin-bottom: rem(24);
 	}
