--- a/sourse/pug/blocks/sTariffs/_sTariffs.pug
+++ b/sourse/pug/blocks/sTariffs/_sTariffs.pug
@@ -7,7 +7,7 @@ mixin sTariffs(data)
 			+e.slider--js.swiper
 				+e.row.row.swiper-wrapper
 					+e.slide.swiper-slide.col-12.col-lg-4
-						+img('img/sTariffs-img-1.png')
+						+img('img/svg/sTariffs-img-1.svg')
 						h6 Очное обучение
 						ul
 							li Персональные инструкции от&nbsp;SAP экспертов в&nbsp;ультрасовременном Учебном центре
@@ -18,7 +18,7 @@ mixin sTariffs(data)
 							| Подробнее
 							+icon('popup')
 					+e.slide.swiper-slide.col-12.col-lg-4
-						+img('img/sTariffs-img-2.png')
+						+img('img/svg/sTariffs-img-2.svg')
 						h6 Дистанционное обучение
 						ul
 							li Обучение под руководством экспертов SAP
@@ -29,7 +29,7 @@ mixin sTariffs(data)
 							| Подробнее
 							+icon('popup')
 					+e.slide.swiper-slide.col-12.col-lg-4
-						+img('img/sTariffs-img-3.png')
+						+img('img/svg/sTariffs-img-3.svg')
 						h6 Самостоятельное обучение
 						ul
 							li Курсы для самостоятельного изучения (e-Learnings), доступны в&nbsp;любое время и&nbsp;в&nbsp;любом месте
