--- a/sourse/pug/blocks/sOpportunities/_sOpportunities.scss
+++ b/sourse/pug/blocks/sOpportunities/_sOpportunities.scss
@@ -3,6 +3,7 @@
 	// --sPT: #{rem()};
 	// --sPB: #{rem()};
 	// --sTPB: #{rem()};
+	background-color: #08080B;
 	&__row {
 		// --bs-gutter-x: #{rem()};
 		// --bs-gutter-y: #{rem()};
