--- a/sourse/pug/blocks/sExpert/_sExpert.pug
+++ b/sourse/pug/blocks/sExpert/_sExpert.pug
@@ -12,7 +12,7 @@ mixin sExpert(data)
 				+e.slider--js.swiper
 					.swiper-wrapper
 						+title()
-						+e.slide.swiper-slide
+						+e.slide.swiper-slide: +e.item
 							+e.year 2021 г.
 							+e.logo
 								img(src="img/svg/expert-logo-1.svg", alt="")
@@ -24,7 +24,7 @@ mixin sExpert(data)
 							+e.link(href="#")
 								span О проекте
 								+icon('chevron-right')
-						+e.slide.swiper-slide
+						+e.slide.swiper-slide: +e.item
 							+e.year 2020 г.
 							+e.logo
 								img(src="img/svg/expert-logo-2.svg", alt="")
@@ -36,7 +36,7 @@ mixin sExpert(data)
 							+e.link(href="#")
 								span О проекте
 								+icon('chevron-right')
-						+e.slide.swiper-slide
+						+e.slide.swiper-slide: +e.item
 							+e.year 2020 г.
 							+e.logo
 								img(src="img/svg/expert-logo-1.svg", alt="")
@@ -48,7 +48,7 @@ mixin sExpert(data)
 							+e.link(href="#")
 								span О проекте
 								+icon('chevron-right')
-						+e.slide.swiper-slide
+						+e.slide.swiper-slide: +e.item
 							+e.year 2019 г.
 							+e.logo
 								img(src="img/svg/expert-logo-2.svg", alt="")
@@ -60,7 +60,7 @@ mixin sExpert(data)
 							+e.link(href="#")
 								span О проекте
 								+icon('chevron-right')
-						+e.slide.swiper-slide
+						+e.slide.swiper-slide: +e.item
 							+e.year 2019 г.
 							+e.logo
 								img(src="img/svg/expert-logo-2.svg", alt="")
@@ -72,7 +72,7 @@ mixin sExpert(data)
 							+e.link(href="#")
 								span О проекте
 								+icon('chevron-right')
-						+e.slide.swiper-slide
+						+e.slide.swiper-slide: +e.item
 							+e.year 2018 г.
 							+e.logo
 								img(src="img/svg/expert-logo-2.svg", alt="")
@@ -84,7 +84,7 @@ mixin sExpert(data)
 							+e.link(href="#")
 								span О проекте
 								+icon('chevron-right')
-						+e.slide.swiper-slide
+						+e.slide.swiper-slide: +e.item
 							+e.year 2018 г.
 							+e.logo
 								img(src="img/svg/expert-logo-2.svg", alt="")
@@ -96,18 +96,21 @@ mixin sExpert(data)
 							+e.link(href="#")
 								span О проекте
 								+icon('chevron-right')
-			+e.slider-pagination--js.swiper
-				.swiper-wrapper
-					+e.pagination-item.swiper-slide
-						+e.pagination-title 2021 г.
-					+e.pagination-item.swiper-slide
-						+e.pagination-title 2020 г.
-					+e.pagination-item.swiper-slide
-						+e.pagination-title 2020 г.
-					+e.pagination-item.swiper-slide
-						+e.pagination-title 2018 г.
-					+e.pagination-item.swiper-slide
-						+e.pagination-title 2017 г.
-					+e.pagination-item.swiper-slide
-						+e.pagination-title 2016 г.
+			+e.slider-pagination-wrap
+				+e.slider-pagination--js.swiper
+					.swiper-wrapper
+						+e.pagination-item.swiper-slide
+							+e.pagination-title 2021 г.
+						+e.pagination-item.swiper-slide
+							+e.pagination-title 2020 г.
+						+e.pagination-item.swiper-slide
+							+e.pagination-title 2020 г.
+						+e.pagination-item.swiper-slide
+							+e.pagination-title 2019 г.
+						+e.pagination-item.swiper-slide
+							+e.pagination-title 2018 г.
+						+e.pagination-item.swiper-slide
+							+e.pagination-title 2018 г.
+						+e.pagination-item.swiper-slide
+							+e.pagination-title 2018 г.
 	// end sExpert
