--- a/sourse/pug/blocks/sExpert/_sExpert.scss
+++ b/sourse/pug/blocks/sExpert/_sExpert.scss
@@ -29,6 +29,7 @@
 			margin-left: calc(var(--slTitleW) + 30px);
 			// width: calc(rem(348) + 24px); 
 			max-width: 100%;
+			max-width: rem(348);
 		}
 		.swiper-wrapper{
 			@include media-breakpoint-up(md) { 
@@ -49,19 +50,9 @@
 		margin-bottom: 0;
 	}
 
-	&__slide {
-		@include media-breakpoint-up(md) {
-			width: rem(348);
-			
-		}
-		position: relative;
-		transition-duration: 0.4s;
-		width: 100%;
-		background-color: #141317;
-		padding: rem(24);
-		height: rem(392);
-		display: flex;
-		flex-direction: column;
+	&__slide{
+		width:  rem(392);
+		height: auto;
 		&--title {
 			margin-bottom: 30px;
 			// width: calc(var(--c-g) + rem(388)) !important;
@@ -88,11 +79,31 @@
 		}
 		&.swiper-slide-active {
 			@include media-breakpoint-up(md) {
-				transform: translateY(rem(-105)) !important;
+				.sExpert__item{
+
+					transform: translateY(rem(-105)) !important;
+				}
 				&:not(:first-child){
 				}
 			}
 		}
+	}
+	&__item {
+		@include media-breakpoint-up(md) {
+			
+			
+		}
+		position: relative;
+		transition-duration: 0.4s;
+		width: 100%;
+		background-color: #141317;
+		padding: rem(24);
+		height: 100%;
+		min-height:  rem(392);
+		display: flex;
+		flex-direction: column;
+	
+
 	}
 	&__year {
 		color: #acb4c0;
@@ -168,26 +179,60 @@
 			font-size: rem(13);
 		}
 	}
+	&__slider-pagination-wrap{
+		margin-top: rem(60);
+		
+		z-index: 2;
+		position: relative;
+		
+	}
 	&__slider-pagination {
+		@include media-breakpoint-up(md) {
+			--sp: -3.4%;
+			margin-left: var(--sp);
+			margin-right: var(--sp);
+			padding-bottom: rem(20);
+		}
 		.swiper-wrapper {
 			@include media-breakpoint-up(md) {
-				flex-wrap: nowrap;
-				justify-content: space-between;
+				// flex-wrap: nowrap;
+				// justify-content: space-between;
+			
 			}
 			position: relative;
 			
 		}
-	}
-	&__slider-pagination {
-		margin-top: rem(60);
-		padding-bottom: rem(20);
-	}
+	} 
 	&__pagination-item {
 		cursor: pointer;
+		// flex-grow: 1;
 		width: auto;
 		--color: #7e7d85;
 		position: relative;
 		padding-bottom: rem(11);
+		text-align: center;
+		&:not(:last-child) {
+			&:after {
+				content: "";
+				z-index: -1;
+				position: absolute; 
+				// bottom: rem(19); 
+				top: 100%;
+				@include media-breakpoint-up(md) {
+					
+				} 
+				// width: calc(100% );
+				// width: calc((100vw - var(--c-g) * 2 ) / 6  + #{rem(14px)} );
+				left: 50%;
+				// transform: translateX(-50%);
+				// width: calc(100% - rem(130));
+				width: 100%;
+				// width: calc(100% + rem(164));
+				height: .06rem;
+				background-image: url("../img/svg/border-bg.svg");
+				background-repeat: repeat-x;
+			}
+		}
 		&.swiper-slide-thumb-active,
 		&:hover {
 			--color:#{$primary};
@@ -196,9 +241,12 @@
 			}
 		}
 		@include media-breakpoint-up(md) {
-			width: rem(64);
+			// width: rem(64);
+			width: calc(100% / 6);
 		}
-		width: rem(180);
+		// width: rem(180);
+		&:not(:last-child) {
+		}
 		&::before {
 			content: "";
 			position: absolute;
@@ -216,24 +264,22 @@
 		}
 
 		&:not(:last-child):after {
-			content: "";
-			position: absolute;
-			// border-top: 1px dotted $white;
-			@include media-breakpoint-up(xxl) {
-			}
-			top: 100%;
-			// top: calc(100% - #{rem(20)});
-			left: rem(32);
-			@include media-breakpoint-up(md) {
+			// @include media-breakpoint-down(md) {
+			// 	content: "";
+			// 	position: absolute;
+			// 	// border-top: 1px dotted $white; 
+			// 	top: 100%;
+			// 	// top: calc(100% - #{rem(20)});
+			// 	left: rem(32);
 
-				width: calc((100vw - var(--c-g) * 2 ) / 6  + #{rem(14px)} );
-			} 
-			width: calc(100% );
-			// width: calc(100% - rem(64));
-			// width: calc(100% + rem(164));
-			height: .06rem;
-			background-image: url("../img/svg/border-bg.svg");
-			background-repeat: repeat-x;
+			// 	width: calc((100vw - var(--c-g) * 2 ) / 6  + #{rem(14px)} );
+			// 	width: calc(100% );
+			// 	// width: calc(100% - rem(64));
+			// 	// width: calc(100% + rem(164));
+			// 	height: .06rem;
+			// 	background-image: url("../img/svg/border-bg.svg");
+			// 	background-repeat: repeat-x;
+			// } 
 		}
 	}
 	&__pagination-title {
