--- a/sourse/pug/blocks/sResourceBase/_sResourceBase.scss
+++ b/sourse/pug/blocks/sResourceBase/_sResourceBase.scss
@@ -2,6 +2,7 @@
 .sResourceBase {
 	// --sPT: #{rem()};
 	// --sPB: #{rem()};
+	background: #08080B;
 	--sTPB: #{rem(24)};
 	@include media-breakpoint-up(lg){
 		--sTPB: #{rem(48)};
@@ -28,8 +29,17 @@
 	&__item{
 		display: flex;
 		align-items: flex-start;
-		@include media-breakpoint-up(md){
-			margin-bottom: rem(72);
+		&:nth-last-child(2) {
+
+			grid-column: 2 / 3;
+			grid-row: 1 / 2;
+		}
+		&:last-child {
+			grid-column: 2 / 3;
+			grid-row: 2 / 4;
+		}
+		@include media-breakpoint-up(lg){
+			margin-bottom: rem(32);
 			flex-direction: row;
 		}
 		flex-direction: column;
@@ -37,10 +47,12 @@
 	}
 	&__number{
 		font-weight: 100;
-		font-size: rem(88);
+		// font-size: rem(88);
+		@include rfs(88px);
 		line-height: 100%;
 		color:$primary;
 		margin-right: rem(24);
+		width: em(22);
 	}
 	&__item-info{
 		padding-top: rem(8);
@@ -60,15 +72,19 @@
 		margin-bottom: 0;
 	}
 	&__list{
-		@include media-breakpoint-up(md){
-			column-width: auto;
-			column-count: 2;
-			column-gap: rem(50);
-		}
-		@include media-breakpoint-up(xxl){
-			column-gap: rem(106);
-		}
+		// @include media-breakpoint-up(md){
+		// 	column-width: auto;
+		// 	column-count: 2;
+		// 	column-gap: rem(50);
+		// }
+		// @include media-breakpoint-up(xxl){
+		// 	column-gap: rem(106);
+		// }
+			display: grid;
+			grid-template-columns: repeat(2, 1fr);
 	}
+
+
 	@include media-breakpoint-up(xl) {}
 	@include media-breakpoint-up(lg) {}
 	@include media-breakpoint-up(md) {}
