--- a/sourse/pug/blocks/sTeam/sTeam-js.pug
+++ b/sourse/pug/blocks/sTeam/sTeam-js.pug
@@ -88,9 +88,11 @@ script.
 						let el = i;
 						let name = charData[ i ][ 'name' ];
 						let color = charData[ i ][ 'color' ];
+						let size = charData[ i ][ 'percent' ];
 						let charContentItem = document.createElement("div");
 						charContentItem.classList.add('sTeam__list-item');
 						charContentItem.style.setProperty('--bg', color);
+						charContentItem.style.setProperty('--percent', size);
 						charContentItem.setAttribute('data-chart', i);
 						charContentItem.innerHTML = `<div class="sTeam__list-item-inner">${name}</div>`;
 						charContent.appendChild(charContentItem);
