--- a/sourse/pug/blocks/sExpert/_sExpert.scss
+++ b/sourse/pug/blocks/sExpert/_sExpert.scss
@@ -210,7 +210,9 @@
 		--color: #7e7d85;
 		position: relative;
 		padding-bottom: rem(11);
+		@include media-breakpoint-up(md) {
 		text-align: center;
+		}
 		&:not(:last-child) {
 			&:after {
 				content: "";
@@ -220,10 +222,11 @@
 				top: 100%;
 				@include media-breakpoint-up(md) {
 					
+					left: 50%;
 				} 
+				left: calc(15% + rem(4));
 				// width: calc(100% );
 				// width: calc((100vw - var(--c-g) * 2 ) / 6  + #{rem(14px)} );
-				left: 50%;
 				// transform: translateX(-50%);
 				// width: calc(100% - rem(130));
 				width: 100%;
@@ -287,7 +290,11 @@
 		font-size: rem(18);
 		line-height: calc(24 / 18);
 		color: var(--color);
-		transition-duration: 0.4s;
+		// transition-duration: 0.4s;
+		@include mt;
+		@include media-breakpoint-down(md) {
+
+		}
 	}
 	&__slide--title{
 		@include media-breakpoint-up(md) {
