--- a/sourse/pug/pages/404.pug
+++ b/sourse/pug/pages/404.pug
@@ -22,9 +22,9 @@ block title
 	title= title
 block pagecontent
 	//- +mob-mnu()
-	video(preload='auto' autoplay='autoplay' loop='loop' playsinline='playsinline' muted='muted' poster='img/poster.webp').bg-video
-			source(src='video/video.webm' type='video/webm')
-			source(src='video/video.mp4' type='video/mp4')
+	//- video(preload='auto' autoplay='autoplay' loop='loop' playsinline='playsinline' muted='muted' poster='img/poster.webp').bg-video
+	//- 		source(src='video/video.webm' type='video/webm')
+	//- 		source(src='video/video.mp4' type='video/mp4')
 	
 	//- +top-nav()
 	//- +headerSearch('Search').bg-dark
