--- a/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
+++ b/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
@@ -102,15 +102,15 @@
 	}
 	&__title {
 		font-weight: 600;
-		font-size: rem(16);
+		font-size: rem(18);
 		line-height: calc(24 / 18);
 		margin-bottom: rem(8);
 	}
 	&__text {
 		font-weight: 300;
-		font-size: rem(12);
+		font-size: rem(14);
 		line-height: calc(16 / 13);
-		color: #7e7d85;
+		// color: #7e7d85;
 	}
 }
 
