--- a/sourse/pug/blocks/s404/_s404.pug
+++ b/sourse/pug/blocks/s404/_s404.pug
@@ -4,7 +4,7 @@ mixin s404(data)
 		+img('img/404-bg-1.jpg', 'bg').picture-bg
 		+blur()
 		h1 404
-		img(src='img/404-bg-2.jpg', alt='').picture
+		img(src='img/404-bg-2.png', alt='').picture
 		+e.text
 			p Страница не найдена. Она не существовала или срок публикации истёк.
 			a(href="#").btn На главную
