--- a/sourse/pug/blocks/sEventsList/_sEventsList.scss
+++ b/sourse/pug/blocks/sEventsList/_sEventsList.scss
@@ -4,6 +4,8 @@
 	// --sPB: #{rem()};
 	// --sTPB: #{rem()};
 	// background-color: #000000;
+	background-color: $dark;
+	background: #08080B;
 	&__row {
 		// --bs-gutter-x: #{rem()};
 		// --bs-gutter-y: #{rem()};
