--- a/sourse/pug/blocks/sNumericalIndicators/_sNumericalIndicators.scss
+++ b/sourse/pug/blocks/sNumericalIndicators/_sNumericalIndicators.scss
@@ -4,6 +4,7 @@
 	// --sPB: #{rem()};
 	// --sTPB: #{rem()};
 	// background-color: #000000;
+	background: #08080B;
 	&__row {
 		// --bs-gutter-x: #{rem()};
 		// --bs-gutter-y: #{rem()};
