--- a/sourse/pug/blocks/sTrust/_sTrust.scss
+++ b/sourse/pug/blocks/sTrust/_sTrust.scss
@@ -3,6 +3,7 @@
 	// --sPT: #{rem()};
 	// --sPB: #{rem()};
 	// --sTPB: #{rem()};
+	background: #08080B;
 	.row{
 		@include media-breakpoint-up(lg) {
 
