--- a/sourse/pug/blocks/sWays/_sWays.pug
+++ b/sourse/pug/blocks/sWays/_sWays.pug
@@ -16,7 +16,7 @@ mixin sWays(data)
 							.tabs__toggle.d-md-none!= t
 								+icon("chevron-down")
 							.tabs__block.d-md-block
-								- let items = [`Финансовый менеджмент`,`Бухгалтерский учёт и финансовое закрытие`,`Управление дебиторской задолженностью, счетами и&nbsp;доходами`,`Корпоративное управление, риски  и&nbsp;кибербезопасность`,`Бизнес-планирование и бюджетирование`,`Отчетность и&nbsp;управление по&nbsp;KPI`,`Разработка финансовой методологии`,`Налоговый мониторинг`]
+								- let items = [`Финансовый менеджмент`,`Бухгалтерский учёт и финансовое закрытие&nbsp;`,`Управление дебиторской задолженностью, счетами и&nbsp;доходами&nbsp;`,`Корпоративное управление, риски  и&nbsp;кибербезопасность&nbsp;`,`Бизнес-планирование и бюджетирование&nbsp;`,`Отчетность и&nbsp;управление по&nbsp;KPI&nbsp;`,`Разработка финансовой методологии`,`Налоговый мониторинг&nbsp;`]
 								ul
 									each a in items
 										li 
