--- a/sourse/pug/blocks/s404/_s404.scss
+++ b/sourse/pug/blocks/s404/_s404.scss
@@ -35,11 +35,13 @@
 		-webkit-text-fill-color: transparent;
 		background-clip: text;
 		text-fill-color: transparent;
+		position: relative;
 		@include media-breakpoint-up(md) {
 			font-size: rem(290);
-			position: absolute;
-			top: 1.1rem;
-			left: 8.722222rem;
+			// position: absolute;
+			margin-top: 2vh;
+			margin-left: 15%;
+
 		}
 		@include media-breakpoint-down(md) {
 			margin-bottom: rem(70);
@@ -87,9 +89,13 @@
 	.picture {
 		position: absolute;
 		left: 0;
-		bottom: -3px;
+		top: 0;
+		height: 100%;
+		object-fit: cover;
 		width: 100%;
 		display: none;
+		z-index: 2;
+		pointer-events: none;
 		@include media-breakpoint-up(md) {
 			display: block;
 		}
