--- a/sourse/pug/blocks/sContent/_sContent.pug
+++ b/sourse/pug/blocks/sContent/_sContent.pug
@@ -13,6 +13,14 @@ mixin sContent()
 				a(href="#") #жизнь компании
 				a(href="#") #новости команды
 		.container.container--small.mb-56(data-aos="fade-up" data-aos-delay="300")
+			.row
+				.col-lg-6
+					+e.mediaContent.mb-4
+						+img('img/article-img-1.jpg', 'bg')
+				.col-lg-6
+					p.h4.mb-32 Donec pellentesque efficitur dui, id&nbsp;dictum ex&nbsp;aliquam&nbsp;id. Vivamus imperdiet pretium odio sit amet laoreet. Vivamus nec velit volutpat quam laoreet lobortis a&nbsp;sed est.
+					p.fw-light.mb-0 Quisque ut consectetur risus, in rhoncus urna. Aenean pellentesque, velit id suscipit pharetra, tortor est egestas dolor, non congue sem nunc quis leo. Donec non purus venenatis, congue lectus nec, volutpat dui. Donec non orci et justo pulvinar tincidunt et vel enim. Cras at nulla massa. Nulla metus enim, consequat eu ante vel, posuere tempor massa. Vestibulum viverra luctus posuere.
+		.container.container--small.mb-56(data-aos="fade-up" data-aos-delay="300")
 			p.h4.mb-32 Donec pellentesque efficitur dui, id&nbsp;dictum ex&nbsp;aliquam&nbsp;id. Vivamus imperdiet pretium odio sit amet laoreet. Vivamus nec velit volutpat quam laoreet lobortis a&nbsp;sed est.
 			p.fw-light.mb-0 Quisque ut consectetur risus, in rhoncus urna. Aenean pellentesque, velit id suscipit pharetra, tortor est egestas dolor, non congue sem nunc quis leo. Donec non purus venenatis, congue lectus nec, volutpat dui. Donec non orci et justo pulvinar tincidunt et vel enim. Cras at nulla massa. Nulla metus enim, consequat eu ante vel, posuere tempor massa. Vestibulum viverra luctus posuere.
 		.container.container--large.mb-56(data-aos="fade-up" data-aos-delay="300")
