--- a/sourse/pug/layout/js-css.pug
+++ b/sourse/pug/layout/js-css.pug
@@ -14,6 +14,10 @@ mixin allcss()
 	link(href="libs/aos/aos.css", rel="stylesheet")
 	//- link(href=`css/main.min.css?v=${version}`, rel="stylesheet")
 	link(href=`css/main.min.css`, rel="stylesheet")
+	style.
+		.menu-mobile:not(.active){
+			visibility: hidden;
+		}
 
 mixin allcjs() 
 	link(href="libs/aos/aos.css", rel="stylesheet")
