--- a/sourse/pug/pages/12-offices.pug
+++ b/sourse/pug/pages/12-offices.pug
@@ -33,7 +33,7 @@ block pagecontent
 			source(src='video/video.mp4' type='video/mp4')
 	
 	+top-nav()
-	+headerBlockBody('Offices', 'Офисы', 'Компания объединяет профессионалов на&nbsp;рынке аналитических систем и&nbsp;интеграционных решений, сегодня в&nbsp;нашей команде более 300 сотрудников из&nbsp;офисов Москвы, Санкт-Петербурга, Перми.')
+	+headerBlockBody('Offices', 'Офисы', 'Компания объединяет профессионалов на&nbsp;рынке аналитических систем и&nbsp;интеграционных решений, сегодня в&nbsp;нашей команде более 300 сотрудников из&nbsp;офисов Москвы, Санкт-Петербурга, Перми.').bg-dark.section--vh
 	+sExperience2()
 	//- +sForm().bg-dark.section--vh
 	+footer().bg-dark
