--- a/sourse/pug/blocks/sAboutPerson/_sAboutPerson.pug
+++ b/sourse/pug/blocks/sAboutPerson/_sAboutPerson.pug
@@ -2,7 +2,7 @@ mixin sAboutPerson(data)
 	// start sAboutPerson
 	+b.sAboutPerson.section#sAboutPerson&attributes(attributes)
 		+e.img
-			img(src="img/person-about.jpg", alt="")
+			img(src="img/director.png", alt="")
 		+e.text-block
 			h2 Миссия и ценности
 			+e.quote Стабильность в&nbsp;бизнесе и&nbsp;жизни не&nbsp;возможна без развития, движения вперёд. Бизнес наших клиентов постоянно меняется, и&nbsp;мы&nbsp;помогаем им&nbsp;в&nbsp;этом. Наша роль&nbsp;&mdash; придать энергии этим изменениям, запустить&nbsp;их. Для этого нас и&nbsp;выбирают. Поэтому SAPRUN&nbsp;&mdash; это энергия изменений
