--- a/sourse/pug/blocks/sForm/_sForm.scss
+++ b/sourse/pug/blocks/sForm/_sForm.scss
@@ -2,7 +2,7 @@
 	// start .sForm
 	.sForm {
 		position: relative;
-		// overflow: hidden;
+		overflow: hidden;
 		z-index: 2;
 		--sTPB: #{rem(32)};
 		.animate-blur{
